<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.hmelizarraraz.segundaaplicacioncoursera.ConfirmacionDatos"
    android:background="@color/blanco">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ptitulo"
        android:gravity="center"
        android:textSize="@dimen/titulo_confirmar"
        android:layout_marginTop="@dimen/top"
        android:textColor="@color/primary_text"
        />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pnombre"
        android:textSize="@dimen/elemento_confirmar"
        android:layout_marginTop="@dimen/top"
        android:textColor="@color/secondary_text"
        />

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pfecha"
        android:textSize="@dimen/elemento_confirmar"
        android:layout_marginTop="@dimen/top"
        android:textColor="@color/secondary_text"
        />

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ptelefono"
        android:textSize="@dimen/elemento_confirmar"
        android:layout_marginTop="@dimen/top"
        android:textColor="@color/secondary_text"
        />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pemail"
        android:textSize="@dimen/elemento_confirmar"
        android:layout_marginTop="@dimen/top"
        android:textColor="@color/secondary_text"
        />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pdescripcion"
        android:textSize="@dimen/elemento_confirmar"
        android:layout_marginTop="@dimen/top"
        android:textColor="@color/secondary_text"
        />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="@dimen/boton_width"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/boton_editar"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/top"
        android:textColor="@color/blanco"
        />




</LinearLayout>
